# Linuxxx

CondVal/: CMakeLists.txt  main.c
CondVal/include/: error_messages.h  queue.h
CondVal/queue/: queue.c
Homework10/: CMakeLists.txt  main.c
Homework2/: batch.sh  main.c
Homework3/: Makefile.mk  main.cc
Homework4/Polynomial_cmake/New folder (2)/: polynomial.cc
Homework4/Polynomial_static/: Makefile  polynomial.h
Homework4/Polynomialc_make/: CMakeLists.txt
Homework5/: CMakeLists.txt  main.c
